General improvement over responsive theme. - Removed leftovers of SuperFish - Removed some testing code for responsive menu handling (button also) - Avoid <br> on some point to make it look better on mobile - Removed HTML5 Breadcrumbs (Works well only under SEF URL) - Changed Moderator box style bit more (small font-size/bold font) - Toggle button (SCEditor) bg-changes.

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2319,6 +2319,7 @@ ul.quickbuttons li > ul > li {
 	border: none;
 	float: right;
 	font-size: 1em;
+	background: none;
 }
 #display_jump_to select {
 	margin: 0 -12px 0 0;
@@ -4130,4 +4131,12 @@ div.lastpost p {
 	font-size: smaller;
 	color: #777;
 	font-weight: normal;
+}
+p.moderators {
+	font-size: 0.9em;
+	font-weight: bold;
+}
+span.postby {
+	width: 100%;
+	float: left;
 }
